[package]
name = "envoyctl"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
name = "envoyctl"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
thiserror = "2.0.17"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
indexmap = { version = "2", features = ["serde"] }
walkdir = "2"
tempfile = "3"
fs_extra = "1.3"
chrono = "0.4"

[[bin]]
name = "envoyctl"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1

